# protect-webhook

./: .gitignore  Cargo.toml  DEVELOPING.md  Dockerfile  NOTES.txt  README.md  Taskfile.yaml  main.rs  manifest.yaml  test.yaml
.github/: CODEOWNERS
.github/workflows/: ci-actions.yaml  ci-chart.yaml  ci-code.yaml  helm-test.yaml  release-artifacts.yaml  release-artifacts.yml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  webhook.yaml
chart/templates/tests/: test-connection.yaml
charts/protect-webhook/: Chart.yaml  README.md  values.yaml
charts/protect-webhook/ci/: self-signed-values.yaml
charts/protect-webhook/templates/: deployment.yaml  service.yaml  webhook.yaml
data/: admission.json
examples/self-signed-certs/: README.md  self-signed-certs.yaml  values.yaml
hack/code/: shfmt.sh
src/: main.rs
src/server/: healthz.rs  livez.rs  mod.rs  mutate.rs
