[package]
name = "protect-webhook"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bytes = "1.10.1"
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
